# squishyplanet

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  figure.py  paper.md  pyproject.toml  scratch.ipynb  setup.py  tox.ini
.github/workflows/: ci.yml  draft-pdf.yml  tests.yml
docs/: api.rst  changelog.rst  conf.py  contributing.md  engine.rst  geometry.md  geometry.rst  index.md  index.rst  installation.md  installation.rst  limb_darkening.rst  oblate_system.rst  quickstart.ipynb  requirements.txt  ringed_system.rst
docs/_static/: angles.npy  animations.ipynb  intersections.npy  para.pkl  times.npy  xc.npy
docs/_static/media/videos/_static/480p15/sections/: SquishyPlanet.json
docs/tutorials/: create_a_lightcurve.ipynb  create_a_phase_curve.ipynb  fit_a_transit.ipynb  fit_oblate_transit.ipynb  illustrations.ipynb  lightcurve_compare.ipynb  limb_darkening_choices.ipynb  performance.ipynb  ringed_transits.ipynb  scratch.ipynb  starry_phase_curve.npy  starry_reflected_curve.npy  xo_flux.npy
docs/tutorials/exotic_ld_data/Sensitivity_files/: JWST_NIRSpec_Prism_throughput.csv
fortran_implementation/: CMakeLists.txt  README.md  constants.f90  integrals.f90  intersection_pts.f90  keplerian.f90  luna_test.f90  main.f90  model_types.f90  parametric_ellipse.f90  planet_3d.f90  read_in_files.f90  scratch.ipynb  squishyplanet.f90  squishyplanet_2d.f90  squishyplanet_3d.f90  squishyplanet_luna_interface.f90  times.txt
fortran_implementation/change_of_basis_matricies/: generate.py
fortran_implementation/external_libraries/BLAS/SRC/: dnrm2.f90  scnrm2.f90  snrm2.f90
fortran_implementation/external_libraries/lapack_routines/complex16/: zgehrd.f  zlahr2.f  ztrevc.f
fortran_implementation/external_libraries/lapack_routines/lapack_routine/: dznrm2.f90
fortran_implementation/external_libraries/quadpack/: quadpack.F90  quadpack_double.F90  quadpack_generic.F90  quadpack_quad.F90  quadpack_single.F90
joss/: figure.py  paper.bib  paper.md
squishyplanet/: OblateSystem.py  __init__.py  limb_darkening_laws.py  oblate_system.py  ringed_system.py  system.py
squishyplanet/engine/: coordinate_transforms.py  greens_basis_transform.py  kepler.py  parametric_ellipse.py  phase_curve_utils.py  planet_2d.py  planet_3d.py  polynomial_limb_darkened_transit.py  ringed_transit.py  rings.py  spherical_harmonic_bases.py  spherical_harmonics.py  spherical_harmoninc_basis_transform.py
squishyplanet/engine/development/: lambertian_reflectance.py  quadratic_limb_darkened_transit.py  terminator.py  test_emission_normalization.py
squishyplanet/engine/mathematica/: emission_profile.wls  mathematica_translator.ipynb  planet_2d.wls  planet_3d.wls  ring_coefficients.nb  ring_planet_intersection.nb  terminator_2d.wls  terminator_from_star.wls  visualizations.nb
tests/: requirements.txt  test_against_jaxoplanet_transit.py  test_emission_normalization.py  test_fast_transit_components.py  test_four_intersections.py  test_limb_darkening.py  test_oblate_system.py  test_pathological_transits.py  test_projected_parameterization.py  test_ring_overlap.py  test_ringed_lightcurve.py  test_rings_geometry.py  test_rings_shapely.py  test_tmp.py  tmp.py
tools/: codespell_notebook_markdown.py
