[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "squishyplanet"
version = "0.3.1"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "jax",
    "jaxlib",
    "quadax",
    "tqdm",
    "black",
    "astropy>5",
    "matplotlib",
    "sympy",
    "ipykernel",
]
authors = [
  {name = "Ben Cassese", email = "b.c.cassese@columbia.edu"},
]
license = {text = "MIT"}
keywords = ["astronomy", "exoplanets"]
description = "A package for dealing with non-spherical exoplanets"
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Homepage = "https://github.com/ben-cassese/squishyplanet"
Documentation = "https://squishyplanet.readthedocs.io/en/latest/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["squishyplanet", "squishyplanet.*"]

[tool.black]
line-length = 88

[tool.coverage.run]
omit = [
    "tests/*",
]
exclude_lines = [
    '.*@_defjvp*'
]